<resources>
    <string name="app_name">School Grading &amp; Monitoring</string>
    <string name="opneToggel">open</string>
    <string name="close">close</string>
    <string name="edit_details"><u>Edit Details</u></string>
    <string name="dios_name"><b>Welcome,</b> \n \tDIOS, Hammirpur</string>
    <string name="title_activity_jd_dashboard">JD_Dashboard</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passed_student"><b>%</b> of Passed Student</string>
    <string name="cctv">CCTV</string>
    <string name="principal_training_and_teacher_traing">Principal and Teachers Training Details</string>
    <string name="training_for_principal">Training For Principal</string>
    <string name="no_of_proposed_training_module">No. of Proposed Training/Module</string>
    <string name="no_of_trainings_modules_completed">No. of Trainings/Modules Completed</string>
    <string name="training_for_teacher">Training For Teacher</string>
    <string name="approved">Approved</string>
    <string name="details_of_trees">Details of Trees</string>
    <string name="plantation">Plantation</string>
    <string name="wall_painting_slogan_writing_bala_work">Wall Painting/ Slogan Writing /BALA Work</string>
    <string name="availability_of_dustbins_in_campus">Availability of dustbins in Campus</string>
    <string name="eco_club">Eco Club</string>
    <string name="display_board_notice_board">Display Board/ Notice Board</string>
    <string name="no_of_trees">No. Of Trees</string>
    <string name="running_metre_of_flower_bed">Running Metre of flower bed</string>
    <string name="plantation_details_for_financial_year">Plantation Details for Financial Year</string>
    <string name="target">Target</string>
    <string name="planted">Planted</string>
    <string name="survive">Survive</string>
    <string name="school_building_white_wash_painting">School Building White Wash/ Painting</string>
    <string name="last_done_fy">Last Done (FY)</string>
    <string name="budget_fy">Budget (FY)</string>
    <string name="sanction_amount">Sanction Amount</string>
    <string name="maintenance_of_windows_doors">Maintenance of Windows/ Doors</string>
    <string name="painting_of_black_boards">Painting of Black Boards</string>
    <string name="repairing_of_furniture_s">Repairing of Furniture\'s</string>
    <string name="cleaning_of_water_tanks">Cleaning of water tanks</string>
    <string name="cleaning_of_drainage_system">Cleaning of Drainage System</string>
    <string name="cleaning_of_toilets">Cleaning of Toilets</string>
    <string name="maintenance_of_electrical_equipment_s">Maintenance of Electrical Equipment\'s</string>
    <string name="boards_of_honour_for_students">Boards of Honour For Students</string>
    <string name="boards_of_honour_for_teachers_amp_staff"><![CDATA[Boards of Honour For Teachers & Staff]]></string>
    <string name="sign_board_outside_the_school">Sign Board outside the school</string>
    <string name="rejected">Rejected</string>
    <string name="co_curricular">Co-Curricular Activities Dashboard</string>
    <string name="school_grading_amp_monitoring_system"><![CDATA[School Grading & Monitoring System]]></string>
    <string name="red_cross_society">Red Cross Society</string>
    <string name="scout_amp_guide"><![CDATA[Scout & Guide]]></string>
    <string name="current_yeat">Current Year result Details</string>
    <string name="parameters">Parameters</string>
    <string name="updated_on">Updated On</string>
    <string name="schoo_result_dash">School Result Dashboard</string>
    <string name="last_3_year_result">Last 3 Year Result</string>
    <string name="current_result">Current Result</string>
    <string name="staff_attendance">Staff Attendance Dashboard</string>
    <string name="date_wise_attendance">Date Wise Attendance</string>
    <string name="attendance_date">Attendance Date</string>
    <string name="get_attendance">Get Attendance</string>
    <string name="school_wise_dashboard">School Wise Dashboard</string>
    <string name="student_enrollment">Student Enrollment</string>
    <string name="school_staff">School Staff</string>
    <string name="school_result_details">School Result Details</string>
    <string name="receipts_and_expenditure">Receipts And Expenditure</string>
    <string name="subject_wise_syllabus">Subject Wise Syllabus</string>
    <string name="school_physical_status">School Physical Status</string>
    <string name="campus_beautification">Campus Beautification</string>
    <string name="extra_activity_details">Extra Activity Details</string>
    <string name="co_curricular_activities">Co-Curricular Activities</string>
    <string name="school_name">School Name</string>
    <string name="staff_details_dashbiard">Staff Details Dashboard</string>
    <string name="staff_sanction_amp_working"><![CDATA[Staff Sanction & Working]]></string>
    <string name="principal_amp_teacher_training"><![CDATA[Principal & Teacher Training]]></string>
    <string name="extra_activties">Extra Activities Details</string>
    <string name="activities">Activities</string>
    <string name="sports_day">Sports Day</string>
    <string name="annual_day_prize_day_cultural_day">Annual Day/Prize Day/Cultural Day</string>
    <string name="invited_chief_guest">Invited Chief Guest</string>
    <string name="yoga_day">Yoga Day</string>
    <string name="inter_house_competition">Inter House Competition</string>
    <string name="school_website">School Website</string>
    <string name="url">URL</string>
    <string name="school_email_id">School Email ID</string>
    <string name="email">EMAIL</string>
    <string name="pta_meeting">PTA Meeting</string>
    <string name="monthly_test">Monthly Test</string>
    <string name="teacher_s_dairy">Teacher’s Dairy</string>
    <string name="health_check_up_camps">Health check up camps</string>
    <string name="school_magazine">School Magazine</string>
    <string name="special_guest_invited_for_career_counselling">Special Guest Invited(For Career Counselling)</string>
    <string name="name_of_guest">Name of Guest</string>
    <string name="designation">Designation</string>
    <string name="smdc_meet">SMDC Meet</string>
    <string name="alumni_meet">Alumni Meet</string>
    <string name="schools_science_exhibition">Schools Science Exhibition</string>
    <string name="inspired_award">Inspired Award</string>
    <string name="selection_of_student_in_national_talent_search_examination">Selection of Student in National Talent Search Examination</string>
    <string name="skill_developments_programmes">Skill developments programmes</string>
    <string name="innovation_in_education">Innovation in Education</string>
    <string name="others_mission_shakti_spc_kala_utasav">Others(mission Shakti, SPC, Kala Utasav.)</string>
    <string name="students_tie">Students Tie</string>
    <string name="students_belt">Students Belt</string>
    <string name="students_uniform">Students Uniform</string>
    <string name="students_id_cards">Students ID Cards</string>
    <string name="extra_activties_dashboard">Extra Activities Dashboard</string>
    <string name="extra_activities">Extra Activities</string>
    <string name="participation">Participation</string>
    <string name="department_of_secondary_education_government_of_uttar_pradesh">Department of Secondary Education Government of Uttar Pradesh</string>
    <string name="your_mobile_number_is">Your Mobile Number is</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="game_details">Game Details</string>
    <string name="game_facility">Game Facility</string>
    <string name="grant_for_sports_amp_physical_education"><![CDATA[Grant for Sports & Physical Education]]></string>
    <string name="receipt_amount">Receipt Amount</string>
    <string name="expenditure_amount">Expenditure Amount</string>
    <string name="games_type">Games Type</string>
    <string name="indoor_games">Indoor Games</string>
    <string name="outdoor_games">Outdoor Games</string>
    <string name="availability_of_sport_teacher">Availability of Sport Teacher</string>
    <string name="yes">Yes</string>
    <string name="is_any_teacher_nominated">IS any teacher Nominated</string>
    <string name="availability_of_sports">Availability of Sports</string>
    <string name="is_any_student_participated_in_district_level">Is any student participated in District level.</string>
    <string name="is_any_student_participated_in_state_level">Is any student participated in State level.</string>
    <string name="no">No</string>
    <string name="is_any_student_participated_in_national_level">Is any student participated in National level.</string>
    <string name="school_is_registered_in_fit_india_schools_programme">School is registered in Fit India Schools Programme.</string>
    <string name="how_many_students_registered_in_fit_india_schools_programme">How many students registered in Fit India Schools Programme.</string>
    <string name="school_is_registered_in_khelo_india_programme">School is registered in Khelo India Programme.</string>
    <string name="how_many_students_registered_in_khelo_india_programme">How many students registered in Khelo India Programme.</string>
    <string name="remember_me">Remember Me</string>
    <string name="show_password">Show password</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="ncc_details">NCC Details</string>
    <string name="whether_ncc_is_running_in_your_school">Whether NCC is running in your School?</string>
    <string name="year_of_raising_ncc">Year of raising NCC</string>
    <string name="whether_school_has_ncc_parade_ground">Whether School has NCC Parade Ground?</string>
    <string name="wheather_school_hass">Whether School has NCC Room?</string>
    <string name="whether_school_has_a_trained_ano_for_each_wing_division">Whether school has a trained ANO for each wing/Division</string>
    <string name="cadets_participated_in_sscd_social_service_and_community_development">Cadets participated in SSCD(Social Service and Community Development)</string>
    <string name="ncc_details_for_current_academic_year">NCC Details (For Current Academic Year)</string>
    <string name="wing_division">Wing / Division</string>
    <string name="no_of_cadets">No. of Cadets</string>
    <string name="sd">SD</string>
    <string name="sw">SW</string>
    <string name="jd">JD</string>
    <string name="jw">JW</string>
    <string name="wings">Wings</string>
    <string name="army">ARMY</string>
    <string name="naval">NAVAL</string>
    <string name="air">AIR</string>
    <string name="art_and_craft">Art And Craft Room</string>
    <string name="no_of_machines">No.of Machines</string>
    <string name="boundary_wall">Boundary Wall</string>
    <string name="uploaded_images">Uploaded Images</string>
    <string name="principal">Principal</string>
    <string name="no_of_sanctioned_posts">No. of Sanctioned Posts</string>
    <string name="no_of_posted_staff">No. Of Posted Staff</string>
    <string name="no_of_attached_staff">No. Of Attached Staff</string>
    <string name="no_of_working_staff">No. Of Working Staff</string>
    <string name="student_enrollment_details">Student Enrollment Details</string>
    <string name="last_three_year_result">Last Three Years Result</string>
</resources>